# amethyst

./: README.md  pyproject.toml
src/: __init__.py
src/amethyst/: __init__.py
tests/: test_features.py  test_read_write.py
tools/: analyze.py
