[tool.poetry]
name = "amethyst"
version = "0.1.0"
description = "personal knowledge graph library"
authors = ["Tomas Krnak <tomas@krnak.cz>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
