[tool.poetry]
name = "amethyst"
version = "0.1.0"
description = "personal knowledge graph library"
authors = ["Tomas Krnak <tomas@krnak.cz>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dag-cbor = "^0.3.2"
cbor2 = "^5.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
