[tool.poetry]
name = "amethyst"
version = "0.1.0"
description = "personal knowledge graph library"
authors = ["Tomas Krnak <tomas@krnak.cz>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [
    { include = "amethyst", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
dag-cbor = "^0.3.2"
cbor2 = "^5.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
